# pydantic-ai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  mkdocs.insiders.yml  mkdocs.yml  preview.README.md  pyproject.toml  requirements.txt  uprev.py
.claude/: settings.json
.github/: get_preview_url.py  set_docs_main_preview_url.py  set_docs_pr_preview_url.py  set_docs_preview_url.py
.hyperlint/: config.yaml
clai/: README.md  pyproject.toml  update_readme.py
clai/clai/: __init__.py  __main__.py
demos/: parse_model.py  weather.py
docs/: _worker.js  a2a.md  ag-ui.md  agents.md  builtin-tools.md  changelog.md  cli.md  common-tools.md  common_tools.md  contributing.md  deferred-tools.md  dependencies.md  direct.md  evals.md  graph.md  help.md  index.md  input.md  install.md  logfire.md  mcp_servers.md  message-history.md  models.md  multi-agent-applications.md  output.md  results.md  retries.md  temporal.md  testing-evals.md  testing.md  thinking.md  third-party-tools.md  tools-advanced.md  tools.md  toolsets.md  troubleshooting.md
docs-site/: README.md  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
examples/: README.md  pydantic_model.py  pyproject.toml  rag.py  sql_gen.py  weather.py
examples/pydantic_ai_examples/: bank_support.py  chat_app.html  chat_app.py  data_analyst.py  flight_booking.py  mcp_server.py  pydantic_model.py  question_graph.py  rag.py  roulette_wheel.py  sql_gen.py  stream_markdown.py  stream_whales.py  weather_agent.py  weather_agent_gradio.py
examples/pydantic_ai_examples/ag_ui/: __init__.py  __main__.py
examples/pydantic_ai_examples/ag_ui/api/: __init__.py  agentic_chat.py  agentic_generative_ui.py  human_in_the_loop.py  predictive_state_updates.py  shared_state.py  tool_based_generative_ui.py
examples/pydantic_ai_examples/evals/: __init__.py  agent.py  custom_evaluators.py  eval.py  example_01_generate_dataset.py  example_02_add_custom_evaluators.py  example_03_unit_testing.py  example_04_compare_models.py  models.py  run.py  test_cases.yaml  test_cases_schema.json
examples/pydantic_ai_examples/evals/datasets/: time_range_v1.yaml  time_range_v1_schema.json  time_range_v2.yaml  time_range_v2_schema.json
examples/pydantic_ai_examples/slack_lead_qualifier/: agent.py  app.py  functions.py  modal.py  models.py  slack.py  store.py
fasta2a/: README.md  pyproject.toml
fasta2a/fasta2a/: __init__.py  applications.py  broker.py  client.py  schema.py  storage.py  task_manager.py  worker.py
mcp-run-python/: .gitignore  README.md  build.ts  cli.js  deno.json  inline_python.js  package-lock.json  package.json  pyproject.toml  test_mcp_servers.py  tsconfig.json
mcp-run-python/.zed/: settings.json
mcp-run-python/src/: index.ts  main.ts  polyfill.ts  prepareEnvCode.d.ts  prepareEnvCode.ts  prepare_env.py  runCode.ts
mcp-run-python/stubs/: pyodide_js.pyi
mcp-run-python/stubs/pyodide/: code.pyi
pydantic_ai/: __init__.py  _pydantic.py  _result.py  _retriever.py  _system_prompt.py  _utils.py  agent.py  call.py  call_typing.py  dependencies.py  exceptions.py  function_calls.py  messages.py  result.py  retrievers.py  shared.py
pydantic_ai_examples/: README.md  __main__.py  bank_support.py  chat_app.html  chat_app.py  chat_app.ts  pydantic_model.py  pyproject.toml  rag.py  roulette_wheel.py  sql_gen.py  stream_markdown.py  stream_whales.py  weather.py  weather_agent.py
pydantic_ai_slim/: README.md  pyproject.toml
pydantic_ai_slim/pydantic_ai/: __init__.py  _a2a.py  _agent_graph.py  _cli.py  _function_schema.py  _griffe.py  _mcp.py  _otel_messages.py  _output.py  _parts_manager.py  _pydantic.py  _result.py  _run_context.py  _system_prompt.py  _thinking_part.py  _tool.py  _tool_manager.py  _utils.py  ag_ui.py  agent.py  builtin_tools.py  dependencies.py  direct.py  exceptions.py  format_as_xml.py  format_prompt.py  mcp.py  messages.py  output.py  result.py  retries.py  run.py  settings.py  tools.py  usage.py
pydantic_ai_slim/pydantic_ai/agent/: __init__.py  abstract.py  wrapper.py
pydantic_ai_slim/pydantic_ai/common_tools/: duckduckgo.py  tavily.py
pydantic_ai_slim/pydantic_ai/durable_exec/dbos/: _agent.py  _mcp_server.py  _model.py
pydantic_ai_slim/pydantic_ai/durable_exec/temporal/: __init__.py  _agent.py  _function_toolset.py  _logfire.py  _mcp_server.py  _model.py  _run_context.py  _toolset.py
pydantic_ai_slim/pydantic_ai/ext/: aci.py  langchain.py
pydantic_ai_slim/pydantic_ai/models/: __init__.py  _json_schema.py  anthropic.py  bedrock.py  cohere.py  fallback.py  function.py  gemini.py  google.py  groq.py  huggingface.py  instrumented.py  json_schema.py  mcp_sampling.py  mistral.py  ollama.py  openai.py  test.py  vertexai.py  wrapper.py
pydantic_ai_slim/pydantic_ai/profiles/: __init__.py  _json_schema.py  amazon.py  anthropic.py  deepseek.py  google.py  groq.py  harmony.py  meta.py  moonshotai.py  openai.py  qwen.py
pydantic_ai_slim/pydantic_ai/providers/: __init__.py  anthropic.py  azure.py  bedrock.py  cerebras.py  cohere.py  deepseek.py  fireworks.py  gateway.py  github.py  google.py  google_gla.py  google_vertex.py  grok.py  groq.py  heroku.py  huggingface.py  litellm.py  mistral.py  moonshotai.py  ollama.py  openai.py  openrouter.py  together.py  vercel.py
pydantic_ai_slim/pydantic_ai/toolsets/: __init__.py  _dynamic.py  abstract.py  combined.py  deferred.py  external.py  filtered.py  function.py  prefixed.py  wrapper.py
pydantic_evals/: README.md  pyproject.toml
pydantic_evals/pydantic_evals/: __init__.py  _utils.py  dataset.py  generation.py
pydantic_evals/pydantic_evals/evaluators/: __init__.py  _run_evaluator.py  _spec.py  common.py  context.py  evaluator.py  llm_as_a_judge.py  spec.py
pydantic_evals/pydantic_evals/otel/: __init__.py  _context_in_memory_span_exporter.py  _context_subtree.py  span_tree.py
pydantic_evals/pydantic_evals/reporting/: __init__.py
pydantic_graph/: README.md  pyproject.toml
tests/: conftest.py  import_examples.py  json_body_serializer.py  mcp_server.py  parts_from_messages.py  test_a2a.py  test_ag_ui.py  (+31 more)
(+527 files in other folders)
